# Talkpod-A36Plus-SDK

./: .gitignore  .gitmodules  README.md  main.c  makefile
Drivers/LCD/: st7735s.h
Projects/: .clangd  Project+Project.cbuild.yml  Project+Project.cprj  Project.cbuild-idx.yml  Project.cbuild-pack.yml  Project.cbuild-set.yml  Project.cproject.yml  Project.csolution.yml  Project_Project.sct  vcpkg-configuration.json
Projects/RTE/_Project/: RTE_Components.h
Projects/tmp/Project/Project/: CMakeCache.txt  CMakeLists.txt
lib/: .gitignore  gd32f3x0.ld
lib/inc/: delay.h  display.h  gd32f3x0.h  gd32f3x0_it.h  gd32f3x0_misc.h  gpio.h  main.h  st7735s.h  systick.h
lib/src/: boot.c  delay.c  delay.h  display.c  gd32f3x0_it.c  gpio.c  st7735s.c  start.c  systick.c  usart.c
